working on register
